string interpolation - refactoring